--- a/migration-newip-to-ts/package.json
+++ b/migration-newip-to-ts/package.json
@@ -17,19 +17,20 @@
     "license": "ISC",
     "homepage": "",
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.29.0",
+        "@typescript-eslint/parser": "^5.29.0",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^7.0.0",
-        "css-loader": "^5.1.0",
-        "eslint": "^7.27.0",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.3",
-        "eslint-plugin-prettier": "^3.4.0",
+        "css-loader": "^6.7.1",
+        "eslint": "^8.18.0",
         "html-webpack-plugin": "^5.2.0",
         "prettier": "2.2.1",
-        "style-loader": "^2.0.0",
         "webpack": "^5.37.1",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2",
-        "webpack-merge": "^5.7.3"
+        "webpack-merge": "^5.7.3",
+        "style-loader": "^3.3.1",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.7.4"
     }
 }
