--- a/migration-newip-to-ts/package.json
+++ b/migration-newip-to-ts/package.json
@@ -23,14 +23,16 @@
         "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^6.7.1",
         "eslint": "^8.18.0",
+        "file-loader": "^6.2.0",
+        "html-loader": "^3.1.2",
         "html-webpack-plugin": "^5.2.0",
         "prettier": "2.2.1",
+        "style-loader": "^3.3.1",
+        "ts-loader": "^9.3.1",
+        "typescript": "^4.7.4",
         "webpack": "^5.37.1",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2",
-        "webpack-merge": "^5.7.3",
-        "style-loader": "^3.3.1",
-        "ts-loader": "^9.3.1",
-        "typescript": "^4.7.4"
+        "webpack-merge": "^5.7.3"
     }
 }
